templates/tegola-vector-tiles_template.yaml
---
# Source: tegola-vector-tiles/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tegola-vector-tiles-release-name
  labels:
    app: tegola-vector-tiles
    chart: tegola-vector-tiles-0.1.13
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: tegola-vector-tiles
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
---
# Source: tegola-vector-tiles/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tegola-vector-tiles-release-name
  labels:
    app: tegola-vector-tiles
    chart: tegola-vector-tiles-0.1.13
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: tegola-vector-tiles
    release: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: tegola-vector-tiles/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tegola-vector-tiles-release-name
  labels:
    app: tegola-vector-tiles
    chart: tegola-vector-tiles-0.1.13
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: tegola-vector-tiles
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: tegola-vector-tiles
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: b09c8df1cb04399626486e6952ab3e9145226dcad3daaff51747ff5a5b76f1b4
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: tegola-vector-tiles-release-name
          image: "docker-registry.wikimedia.org/wikimedia/operations-software-tegola:latest"
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - --logger
            - zap
            - --config
            - /etc/tegola/config.toml
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /capabilities
              port: 8080
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1m
              memory: 400Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/tegola        
      volumes:        
        - name: config-volume
          configMap:
            name: config-release-name
